normalize add & update

--- a/code/index.html
+++ b/code/index.html
@@ -2,24 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel= "stylesheet" href="style/normalize.css">
+  <link rel="stylesheet" href="style/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | To do app</title>
-
-  
+  <title>Frontend Mentor | To do app</title>  
 </head>
 <body>
-    <header>
-        
-    </header>
+    <main>
+        <section class="todoContainer">
+            <div>
+                <h1>TO DO</h1>
+                <img src="/images/icon-moon.svg" alt="dark theme button">
+            </div>
+        </section>
+        <section>
+            
+        </section>
+    </main>
 
  
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a target="_blank" href="https://hammada-reda.com/">Reda Hammada</a>.
   </div>
 </body>
 </html>
