--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,20 @@
 <body>
     <main>
         <section class="todoContainer">
-            <div>
-                <h1>TO DO</h1>
-                <img src="/images/icon-moon.svg" alt="dark theme button">
+            <div class="todo">
+                <div>
+                    <h1>TO DO</h1>
+                </div>
+                <div>
+                    <img src="/images/icon-moon.svg" alt="dark theme button">
+                </div>
             </div>
+           
         </section>
         <section>
-            
+            <div>
+                <input type = "text";
+            </div>
         </section>
     </main>
 
