--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,8 @@
                     <h1>TO DO</h1>
                 </div>
                 <div>
-                    <img src="/images/icon-moon.svg" alt="dark theme button">
+                    <img id="moon" onclick="darkTheme()" src="/images/icon-moon.svg" alt="dark theme button">
+                    <img id="sun" onclick="lightTheme()" src="/images/icon-sun.svg">
                 </div>
             </div>
            
@@ -34,5 +35,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a target="_blank" href="https://hammada-reda.com/">Reda Hammada</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
