--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
                 <div>
                     <h1>TO DO</h1>
                 </div>
-                <div>
+                <div class="themButtonContainer">
                     <img id="moon" onclick="darkTheme()" src="/images/icon-moon.svg" alt="dark theme button">
                     <img id="sun" onclick="lightTheme()" src="/images/icon-sun.svg">
                 </div>
@@ -24,7 +24,7 @@
         </section>
         <section>
             <div>
-                <input type = "text";
+                <input type = "text">
             </div>
         </section>
     </main>
