--- a/code/index.html
+++ b/code/index.html
@@ -26,6 +26,7 @@
             <div>
                 <input type = "text">
             </div>
+        
         </section>
     </main>
 
@@ -35,6 +36,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a target="_blank" href="https://hammada-reda.com/">Reda Hammada</a>.
   </div>
-  <script src="app.js"></script>
+  <script src="script/theme.js"></script>
 </body>
 </html>
