task pushed to array done

--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
         <section>
             <div>
                 <input id="typeTask" type = "text">
-                <button id="taskButton" onclick="pushArray()">add</button>
+                <button id="taskButton" onclick="addTask()">add</button>
             </div>
         
         </section>
