--- a/code/index.html
+++ b/code/index.html
@@ -27,7 +27,7 @@
                 <input id="typeTask" type = "text">
                 <button id="taskButton" onclick="addTask()">add</button>
             </div>
-            <div class="tasks-container">
+            <div id="tasks-container">
                 
             </div>
         </section>
