--- a/code/index.html
+++ b/code/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel= "stylesheet" href="style/normalize.css">
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style/normalize.css">
+  <link rel = "stylesheet" href="./style/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
   <title>Frontend Mentor | To do app</title>  
 </head>
 <body>
