insert task bar positioned and centered

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main>
+        <!-- insert task section -->
         <section class="todoContainer">
             <div class="todo">
                 <div>
@@ -21,9 +22,8 @@
                 </div>
             </div>
            
-        </section>
-        <section>
-            <div>
+       
+            <div class="insertTaskContainer">
                 <input id="typeTask" type = "text">
                 <button id="taskButton" onclick="addTask()">add</button>
             </div>
